Divided character sheet into partials. Improved formatting of character sheet.

--- a/lang/en.json
+++ b/lang/en.json
@@ -37,7 +37,8 @@
             "injuries": "Injuries",
             "shocks": "Shocks",
             "invTitle": "Investigative Abilities",
-            "genTitle": "General Abilities"
+            "genTitle": "General Abilities",
+            "pushes": "Pushes"
         }
 
     }
