added icons and clickables. cleaned up with css.

--- a/lang/en.json
+++ b/lang/en.json
@@ -38,7 +38,10 @@
             "shocks": "Shocks",
             "invTitle": "Investigative Abilities",
             "genTitle": "General Abilities",
-            "pushes": "Pushes"
+            "pushes": "Pushes",
+            "abilities": "Abilities",
+            "other": "Other",
+            "addInv": "Add Investigative Ability"
         }
 
     }
